--- a/KEY.env
+++ b/KEY.env
@@ -1,6 +1,6 @@
-OPENAI_API_KEY="sk-zr7mcxQGC7slqAQiAe2Hj8KSuQsY7JMrS2a0KbuNFJdoCMY3"
-OPENAI_BASE_URL="https://api.chatanywhere.tech/v1"
+OPENAI_API_KEY="XXXXXXX"
+OPENAI_BASE_URL="url"
 
-neo4j_url = "bolt://localhost:7687"
-neo4j_username = "neo4j"
-neo4j_password = "abc6716518"
+neo4j_url = "your_url"
+neo4j_username = "your_neo4j"
+neo4j_password = "your_password"
